--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=brief17
 
-# Config H2
-spring.h2.console.enabled=true
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:h2:file:~/brief17
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=corantoine
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+## Config H2
+#spring.datasource.url=jdbc:h2:file:~/testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=corantoine
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+## Activer la console H2 (optionnel)
+#spring.h2.console.enabled=true
